# triangulation

./: .gitlab-ci.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build-demo.sh
benches/: circle.rs  grid.rs  uniform.rs
examples/: uniform.rs
src/: dcel.rs  geom.rs  lib.rs  main.rs
src/divconq/: mod.rs
wasm-demo/: Cargo.toml
wasm-demo/src/: lib.rs
wasm-demo/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
