[package]
name = "triangulation"
version = "0.1.0"
authors = ["LeshaInc <includeurl@gmail.com>"]
edition = "2018"

[features]
default = []
parallel = ["rayon"]

[dependencies.rayon]
version = "1.0"
optional = true

[dev-dependencies]
rand = "0.6"
image = "0.20.1"
imageproc = "0.17.0"

[dev-dependencies.structopt]
version = "0.2"
default-features = false
