[package]
name = "triangulation"
version = "0.2.0"
edition = "2018"

authors = ["LeshaInc <includeurl@gmail.com>"]
description = "A collection of triangulation algorithms"
repository = "https://gitlab.com/LeshaInc/triangulation"
readme = "README.md"
keywords = ["geometry", "triangulation", "delaunay"]
categories = ["algorithms"]
license = "MIT OR Apache-2.0"

exclude = [
    "wasm-demo/*"
]

[[bench]]
name = "uniform"
harness = false

[[bench]]
name = "grid"
harness = false

[[bench]]
name = "circle"
harness = false

[features]
default = []
parallel = ["rayon"]

[dependencies.rayon]
version = "1.0"
optional = true

[dev-dependencies]
rand = "0.6"
image = "0.20.1"
imageproc = "0.17.0"
criterion = "0.2"

[dev-dependencies.structopt]
version = "0.2"
default-features = false
